trap-collection/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trap-collection-backend
  labels:
    app.kubernetes.io/name: trap-collection-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: trap-collection-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trap-collection-backend
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
              weight: 1

      containers:
        - name: trap-collection-backend
          image: ghcr.io/traptitech/trap-collection-server:v2.7.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
              name: http
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
