trap-collection/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trap-collection-frontend
  labels:
    app.kubernetes.io/name: trap-collection-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: trap-collection-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trap-collection-frontend
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
              weight: 1

      containers:
        - name: trap-collection-frontend
          image: ghcr.io/traptitech/trap-collection-admin:0.2.12
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
