trap-collection/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trap-collection-backend
spec:
  selector:
    app.kubernetes.io/name: trap-collection-backend
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
  type: ClusterIP
