trap-collection/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trap-collection-frontend
spec:
  selector:
    app.kubernetes.io/name: trap-collection-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
