trap-collection/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trap-collection
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`collection.trap.jp`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: trap-collection-backend
          port: 3001
    - match: Host(`collection.trap.jp`)
      kind: Rule
      services:
        - name: trap-collection-frontend
          port: 80
  tls:
    secretName: trap-collection-tls
